# agilebydesign-skills

./: .gitignore  README.md  commit-msg.txt  deploy-skills.ps1  pyproject.toml
backup/: abd-shaping-removed.md
backup/abd-shaping/: README.md  SKILL.md  skill-config.json
backup/abd-shaping/content/: core.md  process.md  script-invocation.md  strategy.md  validation.md
backup/abd-shaping/docs/: ace-shaping-strategy.md
backup/abd-shaping/rules/: hierarchy-sequential-order.md  interaction-story-granularity.md  (+7 more)
conf/: ace-config.json
logs/: behavior_action_state.json  execution_settings.json
skills/abd-commit-msg/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/abd-context-to-memory/: AGENTS.md  README.md  SKILL.md  requirements-export.txt  requirements-rag.txt  sharepoint_mapping.json  skill-config.json
skills/abd-proposal-respond/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/abd-shaping/: AGENTS.md
skills/abd-solution-modeler/: AGENTS.md  SKILL.md
skills/abd-story-synthesizer/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/abd-synthesis-orchestrator/: README.md  SKILL.md
skills/ace-context-to-memory/: SKILL.md
skills/ace-foo/: AGENTS.md  README.md  SKILL.md  metadata.json
skills/agile-skill-build/: AGENTS.md  README.md  SKILL.md  skill-config.json
skills/content-memory/: SKILL.md
skills/docs/: ace-context-to-memory-story-map.md  agile-bots-story-map.md
skills/export-markdown/: SKILL.md
skills/solution-shaping/: AGENTS.md  README.md  SKILL.md  metadata.json
src/: __init__.py  engine.py
(+725 files in other folders)
